[package]
name = "quasi_macros"
version = "0.3.1"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[lib]
name = "quasi_macros"
plugin = true

[dependencies]
quasi_codegen = { version = "*", git = "https://github.com/kbknapp/rust-quasi_codegen", default-features = false }

[dev-dependencies]
aster = {git = "https://github.com/kbknapp/rust-aster"}
quasi = { version = "*", git = "https://github.com/kbknapp/rust-quasi" }
